# bot-templates

./: .dockerignore  .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject-example.toml  pyproject.toml
.github/workflows/: tests.yml
bot/: Dockerfile  __main__.py  manage.py
bot/cogs/: loader.py
bot/cogs/test/: __init__.py  test.py
bot/misc/: config.py  utils.py
github/workflows/: ci.yml
handlers/db (sql, if needed)/: __init__.py  base.py  models.py
src/: alembic.ini  run.sh
src/alembic/: env.py
src/bot/: __main__.py  manage.py
src/bot/cogs/: __init__.py  loader.py
src/bot/cogs/test/: __init__.py  test.py
src/bot/db/: __init__.py  base.py  models.py
src/bot/misc/: config.py  utils.py
src/tests/: test_migrations_stairway.py
vscode/: settings.json
