[tool.poetry]
name = "*-bot"
version = "0.0.1"
description = "*"
authors = ["hoopengo <hoopengo@yandex.ru>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nextcord = "^2.2.0"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}
taskipy = "^1.10.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^22.6.0"
flake8 = "^4.0.1"
flake8-black = "^0.3.3"
flake8-commas = "^2.1.0"
flake8-bugbear = "^22.7.1"
flake8-polyfill = "^1.0.2"
isort = "^5.10.1"
mypy-extensions = "^0.4.3"
pep8-naming = "^0.13.0"
pre-commit = "^2.19.0"
autoflake = "^1.4"
mypy = "^0.971"

[tool.taskipy.tasks]
run   = { cmd = 'python -m bot', help = 'run bot (dev)' }
check = { cmd = "python -m black bot && python -m flake8 bot", help = "check the code quality" }
clean = { cmd = "python -m autoflake . -r -i -v --ignore-init-module-imports --remove-all-unused-imports --remove-unused-variables", help = "remove unused code/import/variable" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | mongo-data
  | _build
  | buck-out
  | build
  | dist
)/
'''
